[package]
name = "marketplace"
version = "0.1.0"
authors = ["0xantman <antho74830@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
cw-storage-plus = { version = "0.9.1", features = ["iterator"] }
cw2 = "0.9.1"
cw20 = "0.9.1"
cw721 = "0.9.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
terra-cosmwasm = "~2.2.0"
cosmwasm-bignumber = "~2.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
